Resolve card row misalignment and add ituser and rellated functionality

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,12 +93,6 @@ main {
     border-radius: 10px;
 }
 
-.card .card-image img {
-    max-height: 300px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
 .fa-hand-pointer {
     font-size: 20px;
 }
@@ -106,6 +100,18 @@ main {
 .fa-times {
     font-size: 30px;
 }
+
+/* code adapted from https://css-tricks.com/scaled-proportional-blocks-with-css-and-javascript/ */
+.card-image {
+    height: 0;
+    padding-bottom: 66.67%;
+    position: relative;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+/* adapted code end -------------------------- */
+
 /*------------------------------------- navbar */
 
 nav.nav-extended .nav-wrapper {
@@ -158,7 +164,7 @@ nav ul a {
 }
 
 #join-us-button {
-    border-radius: 10px !important;
+    border-radius: 10px;
     margin-top: 50px;
     font-size: 30px;
 }
